- layout fix to summary page - mobile: time list view, wrap long title in order to prevent list breaking

--- a/less/section-confirmation.less
+++ b/less/section-confirmation.less
@@ -58,7 +58,7 @@
 
     /* width 768px - 992px */
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-      width: 52%;
+      width: 55%;
     }
     /* width >= 992px */
     @media (min-width: @screen-md-min) {
@@ -71,7 +71,7 @@
     }
     /* width 768px - 992px */
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-      width: 48%;
+      width: 45%;
       padding-top: 28px;
     }
     /* width >= 992px */
@@ -96,9 +96,15 @@
       width: 78px;
       max-width: 78px;
     }
+    /* width <768px */
     @media (max-width: @screen-xs-max) {
       margin-top: 0;
       margin-left: 20px;
+    }
+    /* width 768px - 992px */
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+      margin-left: 0px;
+      margin-right: 28px;
     }
   }
   .logo-border {
@@ -140,7 +146,7 @@
       }
     }
     textarea {
-      width: 270px;
+      width: 259px;
       height: 115px;
       @media (max-width: @screen-xs-max) {
         border: 0;
@@ -175,7 +181,7 @@
     }
     input[type="text"] {
       margin-top: 5px;
-      width: 270px;
+      width: 259px;
       height: 39px;
       @media (max-width: @screen-xs-max) {
         border: 0;
@@ -214,7 +220,7 @@
     margin-top: 5px;
     p {
       display: inline-block;
-      width: 278px;
+      width: 236px;
       padding: 9px;
       margin: 0;
       text-align: left;
